--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
         <div class="credits">
           
-          Designed by <a href="https://dreamstorealities.vercel.app/">Ebube</a>
+          Designed by <a href="https://dreamstorealities.vercel.app/"target="_blank">Ebube</a>
         </div>
       </div>
       <div class="social-links text-center text-lg-right pt-3 pt-lg-0" id="media">
