--- a/sb.html
+++ b/sb.html
@@ -122,8 +122,8 @@ body {font-family: "Lato", sans-serif}
   
  <div class="w3-display-bottommiddle">
   <video width="50%" height="15%" controls>
-  <source src="drinks/RNGE8766.MP" type="video/mp4">
-  <source src="drinksRNGE8766.MP" type="video/ogg">
+  <source src="drinks/RNGE8766.MP4" type="video/mp4">
+  
 </video>
   </div>
   
