--- a/sb.html
+++ b/sb.html
@@ -131,7 +131,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="credits">
           
-          Designed by <a href="#">Zord</a>
+          Designed by <a href="#">Ebube</a>
         </div>
       </div>
       <div class="social-links text-center text-lg-right pt-3 pt-lg-0" id="media">
