--- a/sb.html
+++ b/sb.html
@@ -8,7 +8,8 @@
   <title>SBWINES</title>
   <meta content="A Sudsidary of gide NIG. ENT .Dealers and supplier of all kind of Champagne,Assorted Fruits Juices,Spring Water,Irish Creams etc. With over 40 years of experiences, we offer the best of prenium whiskeys,champagnes,spring waters,asssorted fruit juices,soft drinks.
 	We are focused on giving you the best of drinks..with us you can drink with confidence.In God we trust.Our HEAD OFFICE at #15 Mission Road, Benin City while our BRANCH OFFICE at shop 8 Ede Shopping Plaza Vegetable Market, Opp.The NIG. Observer Airport Road Benin City." name="description">
-  <meta content="" name="keywords">
+ <meta name="keywords" content="Ebube Ezeudu, Web Developer, Frontend Developer, HTML, CSS, JavaScript, Portfolio, Software Engineer, Computer Science, Responsive Websites, GitHub, LinkedIn, Nigeria Developer">
+
 
   <!-- Favicons -->
   <link href="drinks/sb.png" rel="icon">
@@ -29,12 +30,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="w3css/W3CSS.css">
 
-  <!-- =======================================================
-  * Template Name: Flexor - v2.3.0
-  * Template URL: https://bootstrapmade.com/flexor-free-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+ 
   
   
   <style>
