--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="drinks/sb.png" rel="icon" type="image/png">
-  <link href="drinks/Logo.png" rel="apple-touch-icon" type="image/png">
+<link rel="icon" href="drinks/sb.png" type="image/png" sizes="32x32">
+
+<!-- Icon for iOS home screen -->
+<link rel="apple-touch-icon" href="drinks/Logo.png" type="image/png" sizes="180x180">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
