--- a/index.html
+++ b/index.html
@@ -356,20 +356,18 @@
           <div class="col-lg-3 col-md-6 footer-links" id="services">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Wholesales Supplies</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Retails Supplies</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Event Supplies</a></li>
+              <li><i class="bx bx-chevron-right"></i> Wholesales Supplies</li>
+              <li><i class="bx bx-chevron-right"></i> Retails Supplies</li>
+              <li><i class="bx bx-chevron-right"></i> Consumers Supplies</li>
+              <li><i class="bx bx-chevron-right"></i> Marketing</li>
+              <li><i class="bx bx-chevron-right"></i> Event Supplies</li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Head Office</h4>
             <p>#15, Mission Road, Benin City </p>
-            <form action="content.php" method="post">
-              <input type="email" name="email" ><input type="submit" value="Subscribe" name="myform">
-            </form>
+           
           </div>
 
         </div>
