--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <title>SBWINES </title>
   <meta content="A Sudsidary of gide NIG. ENT .Dealers and supplier of all kind of Champagne,Assorted Fruits Juices,Spring Water,Irish Creams etc. With over 40 years of experiences, we offer the best of prenium whiskeys,champagnes,spring waters,asssorted fruit juices,soft drinks.
 	We are focused on giving you the best of drinks..with us you can drink with confidence.In God we trust.Our HEAD OFFICE at #15 Mission Road, Benin City while our BRANCH OFFICE at shop 8 Ede Shopping Plaza Vegetable Market, Opp.The NIG. Observer Airport Road Benin City." name="description">
-  <meta content="" name="keywords">
+  <meta content="wines benin edo " name="keywords">
 
   <!-- Favicons -->
 <link rel="icon" href="drinks/sb.png" type="image/png">
 
-<!-- Icon for iOS home screen -->
-<link rel="apple-touch-icon" href="drinks/Logo.png" type="image/png" >
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
