--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta content="wines benin edo " name="keywords">
 
   <!-- Favicons -->
-<link rel="icon" href="drinks/sb.png" type="image/png">
+<link rel="icon" href="drinks/s.png" type="image/png">
 
 
 
